assets/css/style.css
/* Import Google Font */
@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;700&display=swap');

/* Fonts */
@font-face {
    font-family: 'james_fajardoregular';
    src: url('../fonts/james_fajardo-webfont.woff2') format('woff2'),
         url('../fonts/james_fajardo-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;
    font-display: swap;
}

/* Reset Styles */
* {
    border: none;
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}
body {
    font-family: 'Open Sans', sans-serif;
    font-weight: 300;
    color: #000;
}
img {
    display: block;
    height: auto;
    max-width: 100%;
}
p, ul, ol, address, td, th, legend, label, input, textarea {
    font-size: 110%;
    font-style: normal;
    margin-bottom: 18px;
}
li {
    margin: 0 0 20px 25px;
}
a {
    text-decoration: none;
}

/* Header */
header {
    background: #9bd2c9 url(../images/header-bg.webp) center top no-repeat;
    padding: 20px 0 10px;
    text-align: center;
}
header a {
    display: inline-block;
}
#logo {
    margin: 0 auto 40px;
    width: 80%;
}
#tagline {
    color: #545479;
    font-family: 'james_fajardoregular', sans-serif;
    font-size: 250%;
    letter-spacing: 2px;
    line-height: .5;
}

/* Responsive Navigation
   Credit: https://www.w3schools.com/howto/howto_js_sidenav.asp
*/
#hamburger {
    cursor: pointer;
    display: block;
    position: fixed;
    right: 2%;
    top: 2%;
}
.bar {
    background: #3a3a3a;
    display: block;
    height: 3px;
    margin: 5px auto;
    width: 25px;
}
#nav {
    display: none;
}
#mobile-nav {
    background: #545479;
    height: 100%; 
    left: 0;
    overflow-x: hidden; 
    padding-top: 10%; 
    position: fixed;    
    top: 0;     
    transition: 0.5s; 
    width: 0;
    visibility: none;
    z-index: 1; 
}
#mobile-nav.visible {
    visibility: visible;
}
#mobile-nav ul {
    font-size: 150%;
    list-style: none;
    margin: 0;
}
#mobile-nav a {
    border-bottom: 2px solid #545479;
    color: #e3ffff;
    transition: 0.3s;
}
#mobile-nav a:hover, #mobile-nav a.active {
    border-bottom: 2px solid #e3ffff;
}
.close-btn {
    color: #e3ffff;
    cursor: pointer;
    font-size: 300%;
    line-height: .5; 
    padding: 0;
    position: absolute;
    right: 2%;
    top: 2%;    
}

/* Common Section Elements */
.full-width {
    padding: 3% 10%;
}
.full-width-heading {
    padding: 1% 10%;
}
.inner-content {
    padding-left: 5%;
}
#main-img {
    height: 400px;
    object-fit: cover;
    object-position: center -40px;
    width: 100%;
}
#main-img.img-right {
    object-position: right -40px;
}
.blue {
    background: #48798D;
    color: #fff;
}
.blue a {
    color: #EBFDFF;
}
.blue a:hover {
    border-bottom: 1px solid #EBFDFF;
}
#content a {
    color: #3a3a3a;
} 
#content a:hover {
    border-bottom: 1px solid #3a3a3a;
}
a.btn, #content a.btn, button.btn {
    background: #545479;
    border: 3px solid #e3ffff;
    border-radius: 50px;
    clear: both;
    color: #e3ffff;
    cursor: pointer;
    display: block;
    font-size: 150%;
    margin: 0 auto;
    padding: 10px 20px;
    text-align: center;
    width: 100%;
}
a.btn:hover, #content a.btn:hover, button.btn:hover {
    background: #48798D;
}

/* Headings */
h1, .circle {
    background: url(../images/h1-circle.webp) no-repeat; 
	font-size: 150%;
    font-weight: 300;
    line-height: 2;
    margin: 0 0 30px;
    min-height: 75px;
	padding: 16px 0 0 30px; 
}
.full-width-heading h1 {
    margin: 0;
}
h2, h3 {
    font-size: 130%;
    font-weight: 300;
    margin: 0 0 30px;
}
h3 {
    font-size: 110%;
}
#content h2 {
    color: #48798D;
    margin-top: 50px;
}
#content h2:first-child {
    margin-top: 0;
}

/* How Can Hypnotherapy Help Section */
#how-can-hypnotherapy-help {
    background: url('../images/hypnotherapy-session.webp') no-repeat;
    background-size: cover;
    -webkit-background-size: cover;
    background-position: center;
    background-attachment: fixed;
    overflow: hidden;
}
#how-can-hypnotherapy-help > div {
    background: #fff;
    border: 2px solid #ccc;
    border-radius: 20px;
    float: left;
    margin: 0 0 50px 2%;
    text-align: center;
    width: 49%;
}
#how-can-hypnotherapy-help > div:hover {
    border: 2px solid #48798D;
}
#how-can-hypnotherapy-help > div:nth-of-type(1),
#how-can-hypnotherapy-help > div:nth-of-type(3),
#how-can-hypnotherapy-help > div:nth-of-type(5),
#how-can-hypnotherapy-help > div:nth-of-type(7) {
    margin-left: 0;
}
#how-can-hypnotherapy-help h2 {
    color: #48798D;
    margin-bottom: 50px;
    text-align: center;
}
#how-can-hypnotherapy-help h3 {
    color: #48798D;
    margin: 10px 0;
}
#how-can-hypnotherapy-help img {
    border-radius: 20px 20px 0 0;
    width: 100%;
}

/* Quote Section */
#quote {
    color: #48798D;
    padding: 3% 10%;
}
#quote blockquote {
    font-family: 'james_fajardoregular', sans-serif;
    font-size: 300%;
    letter-spacing: 2px;
    line-height: .8;
    text-align: center;
}
#quote p {
    color: #3a3a3a;
    float: right;
    font-size: 100%;
}

/* Sessions & Fees table */
table {
    width: 100%;
}
th, td {
    padding: 10px 0;
    text-align: left;
    width: 50%;
}
.small {
    font-size: 80%;
}

/* Session & Fees Page - Click on button to reveal div#cd */
#cd {
    display: none;
    margin-top: 30px;
    text-align: center;
}

/* Form */
form {
    overflow: hidden;
}
fieldset {
    width: 100%;
}
fieldset:first-child {
    float: left;
}
fieldset:last-child {
    float: right;
}
legend {
    border-bottom: 1px solid #fff;
    padding-bottom: 10px;
    width: 100%;
}
label {
    clear: both;
    float: left;
    width: 30%;
}
input, textarea { 
    border-radius: 20px;
    float: right;
    font-family: 'Open Sans', sans-serif;
    padding: 5px 20px;
    width: 70%;
}
input[type=submit] {
    background: #545479;
    border: 3px solid #e3ffff;
    clear: right;
    color: #e3ffff;
    cursor: pointer;
    float: right;
    width: 40%;
}
input[type=submit]:hover {
    background: #48798D;
}

/* Footer Section */
footer {
    background: #9bd2c9;
    color: #3a3a3a;
    overflow: hidden;
    width: 100%;
}
#contact-details {
    float: left;
    width: 100%;
}
#contact-details p {
    line-height: 40px;
}
#contact-details a {
    color: #3a3a3a;
}
#contact-details a:hover {
    border-bottom: 1px solid #3a3a3a;
}
.icon {
    background: #e3ffff;
    border-radius: 50%;
    display: block;
    float: left;
    height: 40px;
    margin-right: 30px;
    text-align: center;
    width: 40px;
}
.icon.location {
    padding-top: 3px;
}
.icon i {
    color: #9bd2c9;
}
/*  Responsive Google Map
    Credit: https://blog.duda.co/responsive-google-maps-for-your-website */
#map {
    float: right;
    height: 0;
    overflow: hidden;
    padding-bottom: 50%;
    position: relative;
    width: 100%;
}
#map iframe {
    left: 0;
    height: 100%;
    position: absolute;
    top: 0;    
    width: 100%;
}
#copyright {
    clear: both;
    padding-top: 50px;
}

/* Media Queries: Medium devices from 1024px wide and up */
@media screen and (min-width: 1024px) {
    header {
        padding: 20px 0 0 0;
    }
    #tagline {
        font-size: 400%;
        line-height: 1;
    }
    #hamburger, #mobile-nav {
        display: none;
    }    
    #nav {
        background: #545479;
        display: block;
        padding: 20px 0;
        text-align: center;
    }
    #nav ul {
        font-size: 130%;
        margin: 0;
    }
    #nav ul > li {
        display: inline;
        margin: 0 15px;
    }
    #nav a {
        border-bottom: 2px solid #545479;
        color: #e3ffff;
        display: inline-block;
        transition: 0.3s;
    }
    #nav a:hover, #nav a.active {
        border-bottom: 2px solid #e3ffff;
    }
    fieldset {
        width: 48%;
    }
    input[type=submit] {
        width: 20%;
    }
    table {
        width: 60%;
    }
}

/* Media Queries: Large devices from 1200px wide and up */
@media screen and (min-width: 1200px) {
    #nav ul {
        font-size: 150%;
    }
    #nav ul > li {
        margin: 0 25px;
    }
    p, ul, ol, address, td, th, legend, label, input, textarea {
        font-size: 150%;
    }
    h1, .circle {
        font-size: 200%;
        line-height: 1.8;
        padding: 8px 0 0 30px; 
    }
    h2, h3 {
        font-size: 180%;
    }
    h3 {
        font-size: 150%;
    }
    .full-width {
        padding: 3% 15%;
    }
    .full-width-heading {
        padding: 1% 15%;
    }
    a.btn, #content a.btn, button.btn {       
        font-size: 200%;
        width: 60%;
    }
    #main-img, #main-img.img-right {
        object-position: center -80px;
    }
    #how-can-hypnotherapy-help > div {
        width: 23.5%;
    }
    #how-can-hypnotherapy-help > div:nth-of-type(3),
    #how-can-hypnotherapy-help > div:nth-of-type(7) {
        margin-left: 2%;
    }
    #how-can-hypnotherapy-help > div:nth-of-type(1),
    #how-can-hypnotherapy-help > div:nth-of-type(5) {
        margin-left: 0;
    }
    #quote {
        padding: 3% 25%;
    }
    #quote blockquote {
        font-size: 500%;
    }
    #quote p {
        font-size: 120%;
    }
    #contact-details {
        width: 60%;
    }
    #map {
        padding-bottom: 40%;
        width: 40%;
    }
}

/* Media Queries: Extra large devices from 1800px wide and up */
@media screen and (min-width: 1900px) {
    #contact-details {
        width: 35%;
    }
    #map {
        padding-bottom: 20%;
        width: 60%;
    }
}

